server_exam/src/main/kotlin/com/example/server_exam/error/RegisterException.kt
package com.example.server_exam.error

class RegisterException(message:String) : RuntimeException(message)